# python-initial-congif

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
