[tool.poetry]
name = "initial-config"
version = "0.1.0"
description = "inital congif with poetry/pre-commit/flake8/black/isort"
authors = ["mkubibaev <mkubibaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^3.8.0"
black = "^24.8.0"

[tool.black]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 5
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
